<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:padding="10dp"
              style="@style/FullWidth">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_view"
        style="@style/SmallPhoto"
        android:src="@drawable/user_profile"/>

    <RelativeLayout
        android:layout_marginStart="@dimen/text_margin"
        style="@style/WrapContent">

        <TextView
            android:id="@+id/author_name_text_view"
            style="@style/WrapContent"
            android:text="@string/user_name_hint"
            android:textStyle="bold"
            android:textAppearance="@style/TextRegular.Primary"/>

        <TextView
            android:id="@+id/author_nick_text_view"
            style="@style/WrapContent"
            android:layout_toEndOf="@+id/author_name_text_view"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/user_nick_hint"
            android:textAppearance="@style/TextRegular.Secondary"/>

        <TextView
            android:id="@+id/creation_date_text_view"
            style="@style/WrapContent"
            android:layout_toEndOf="@+id/author_nick_text_view"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/creation_date_hint"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="@style/TextRegular.Secondary"/>

        <TextView
            android:id="@+id/tweet_content_text_view"
            android:layout_below="@id/author_name_text_view"
            style="@style/WrapContent"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/user_info"
            android:textAppearance="@style/TextRegular.Primary"/>

        <ImageView
            android:id="@+id/tweet_image_view"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_below="@id/tweet_content_text_view"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
        />

        <LinearLayout
            android:layout_marginTop="@dimen/text_margin"
            android:layout_below="@id/tweet_image_view"
            style="@style/FullWidth"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/retweets_container"
                android:orientation="horizontal"
                style="@style/QuarterWidth">

                <TextView
                    style="@style/TextIcon"
                    android:text="@string/fa_retweet"/>


                <TextView
                    android:id="@+id/retweets_text_view"
                    style="@style/WrapContent"
                    android:text="16"
                    android:textAppearance="@style/TextRegular.Secondary"
                />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/likes_container"
                android:orientation="horizontal"
                style="@style/QuarterWidth">

                <TextView
                    style="@style/TextIcon"
                    android:text="@string/fa_heart_o"/>

                <TextView
                    android:id="@+id/likes_text_view"
                    style="@style/WrapContent"
                    android:text="16"
                    android:textAppearance="@style/TextRegular.Secondary"
                />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>