<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        style="@style/SmallPhoto"
        android:src="@drawable/user_profile" tools:layout_editor_absoluteY="10dp"
        tools:layout_editor_absoluteX="10dp"/>

    <TextView
        android:id="@+id/author_name_text_view"
        style="@style/WrapContent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/user_name_hint"
        android:textAppearance="@style/TextRegular.Primary"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="18dp" tools:layout_editor_absoluteX="71dp"/>

    <TextView
        android:id="@+id/textView"
        style="@style/WrapContent"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_toEndOf="@+id/author_name_text_view"
        android:text="@string/user_nick_hint"
        android:textAppearance="@style/TextRegular.Secondary"
        tools:layout_editor_absoluteY="18dp" tools:layout_editor_absoluteX="171dp"/>

    <TextView
        android:id="@+id/tweet_content_text_view"
        style="@style/WrapContent"
        android:layout_below="@id/author_name_text_view"
        android:text="@string/user_info" android:textAppearance="@style/TextRegular.Primary"
        tools:layout_editor_absoluteY="49dp" tools:layout_editor_absoluteX="71dp"/>


    <LinearLayout
        android:id="@+id/comments_container"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintTop_toBottomOf="@+id/tweet_content_text_view"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tweet_content_text_view"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/comments_icon_text_view"
            style="@style/TextIcon"
            android:text="@string/fa_comment_o"/>

        <TextView
            style="@style/WrapContent"
            android:text="16"
            android:textAppearance="@style/TextRegular.Secondary"
        />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/retweets_container"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/comments_container"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tweet_content_text_view">

        <TextView
            android:text="@string/fa_link"
            style="@style/TextIcon"/>


        <TextView
            style="@style/WrapContent"
            android:text="16"
            android:textAppearance="@style/TextRegular.Secondary"
        />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/likes_container"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintLeft_toRightOf="@+id/retweets_container"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tweet_content_text_view">

        <TextView
            style="@style/TextIcon"
            android:text="@string/fa_heart_o"/>

        <TextView
            style="@style/WrapContent"
            android:text="16"
            android:textAppearance="@style/TextRegular.Secondary"
        />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>